# MYGAMES101HW

./: .gitignore
hw1/: CMakeLists.txt  main.cpp
hw2/: CMakeLists.txt  main.cpp  rasterizer.cpp
hw3/: CMakeLists.txt  Texture.hpp  main.cpp  rasterizer.cpp
hw4/: CMakeLists.txt  main.cpp
hw5/: CMakeLists.txt  Renderer.cpp  Scene.hpp  Triangle.hpp  binary.ppm  main.cpp
hw6/: BVH.cpp  BVH.hpp  Bounds3.hpp  Renderer.cpp  Scene.cpp  Triangle.hpp  global.hpp  main.cpp
hw7/: BVH.cpp  Bounds3.hpp  CMakeLists.txt  Intersection.hpp  Material.hpp  ProjLogs.md  Renderer.cpp  Scene.cpp  Scene.hpp  Settings.hpp  Triangle.hpp  main.cpp  settings.json
pa0/: CMakeLists.txt
